// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadList component renders DownloadListButton properly without context 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-89 MuiButton-contained Button-contained-91 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label Button-label-92"
    >
      label
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`DownloadList component renders DownloadListCheckbox properly without context 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="MuiFormControl-root Checkbox-root-83"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-85 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
          data-testid="testID"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              aria-label="first checkbox"
              class="PrivateSwitchBase-input-88"
              data-indeterminate="false"
              name="id-1"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        />
      </label>
    </div>
  </span>
</div>
`;

exports[`DownloadList component renders DownloadListClear properly without context 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-109 Anchorlink MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      Label
    </span>
  </a>
</div>
`;

exports[`DownloadList component renders correctly 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="MuiFormControl-root Checkbox-root-1"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-3 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              aria-label="first checkbox"
              class="PrivateSwitchBase-input-6"
              data-indeterminate="false"
              name="id-1"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        />
      </label>
    </div>
  </span>
  <button>
    Download
  </button>
</div>
`;
